2010-07-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed the notice when
	delete a IP adress from agent configuration for 
	bug: 3016410

2010-07-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.list_items.php: Fixed the
	reports items filter for bug: 3013841

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Changed the Server and All text
	on the events filter to use gettext. 

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Fixed the agent filter. Now the
	pagination keep the agent and shows the name of the agent in the 
	input. Bugfix: 3021807

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: Fixed 
	the storing of width and height of item in visual maps

2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.editor.js
	godmode/reporting/visual_console_builder.editor.php: Fixed
	storing of width and height of the background of the visual map

2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* include/Image/image_functions.php: Reverted an 
	undesired last commit change

2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php
	godmode/reporting/visual_console_builder.editor.js: 
	Fixed the setting of original size by javascript when you 
	choose 0 x 0 in the visual map background for Bug: 3020721

2010-06-29  Junichi Satoh  <junichi@rworks.jp>

	* pandora_console_install: Added support for FreeBSD and RHEL/CentOS.

	* install.php: Added support for FreeBSD.

2010-06-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed the get_agent_modules 
	function to avoid return the pending delete modules

2010-06-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Adding a parameter to
	printTruncateText to personalize the suffix string